vm-builder (0.8.1-0ubuntu3) intrepid; urgency=low

  [Nicolas Barcet <nicolas.barcet@ubuntu.com>]
  * Fixed regression on --ip and friends (LP: #268920)
  * Added missing dependancy on dpkg-dev (LP: #270324)
  * Fixed regression on --part (LP: #268718)
  
  [Soren Hansen <soren@ubuntu.com>]
  * Re-add VMWare support. (LP: #268140) 
  * Fixed sources.list generation for Ubuntu. (LP: #268155)
  * Added configuration file handling. (LP: #268170)
  * Fix up Xen support (device and configuration file creation). (LP: #268142)

 -- Nicolas Barcet <nicolas.barcet@ubuntu.com>  Thu, 11 Sep 2008 23:45:02 +0200

vm-builder (0.8.1-0ubuntu2) intrepid; urgency=low

  * Apply patch to only conditionally import libvirt. Fixes FTBFS.

 -- Soren Hansen <soren@ubuntu.com>  Thu, 04 Sep 2008 09:50:27 +0200

vm-builder (0.8.1-0ubuntu1) intrepid; urgency=low

  * Added lots of inline documentation.
  * Build documentation using epydoc.
  * Moved libvirt support to a separate plugin. (LP: #264605)
  * Deploy directly to libvirt (regression from ubuntu-vm-builder). (LP: #264604)
  * Updated debian/{copyright,control} to reflect move on Launchpad.
  * No longer a native package.

 -- Soren Hansen <soren@ubuntu.com>  Thu, 04 Sep 2008 09:33:29 +0200

vm-builder (0.8) intrepid; urgency=low

  * Rewrote the entire thing in Python.

 -- Soren Hansen <soren@ubuntu.com>  Sat, 05 Jul 2008 00:23:20 +0200

ubuntu-vm-builder (0.7~ppa2) intrepid; urgency=low

  [Thierry Carrez]
  * Patch to fix lilo prompt (fix LP: #206763)
  
  [Loic Minier]
  * Add support for "security mirror"; --security-mirror flag, SECURITY_MIRROR
    config; defaults to security.u.c/ubuntu for official arches and to
    ports.ubuntu.com/ubuntu-ports for lpia.
 
  [Nicolas Barcet]
  * Merge --in-place option from Hardy.
  * Fix case when domain is not defined on the host, thanks to Thierry Carrez
    (LP: #237580)
  * Fix console-setup the good way (by copying /etc/console-setup) thanks
    again to Thierry Carrez (LP: #237616)